src/Components/Collections/Contact/ContactBody.module.css
@media screen and (max-width: 847px) {

    .entireContactBody {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100vw;
    }

    .contactBodyContainer {
        margin-top: 72px;
        display: flex;
        padding: 24px 16px 64px 16px;
        flex-direction: column;
        align-items: center;
        gap: 40px;
        align-self: stretch;
        height: 100%;
    }
    
    .contactHeader {
        align-self: stretch;
        color: var(--Text-Normal, #111);
        text-align: center;
        font-family: Montserrat;
        font-size: 24px;
        font-style: normal;
        font-weight: 500;
        line-height: 100%; /* 24px */
    }

    .contactSubHeaderContainer {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 16px;
        align-self: stretch;
    }

    .contactSubHeaderTop {
        align-self: stretch;
        color: var(--Text-Normal, #111);
        text-align: center;
        font-family: Montserrat;
        font-size: 18px;
        font-style: normal;
        font-weight: 500;
        line-height: 100%; /* 18px */
    }

    .contactSubHeaderBottom {
        align-self: stretch;
        color: #4B4B4B;
        text-align: center ;
        font-family: "Verdana";
        font-size: 13px;
        font-style: normal;
        font-weight: 400;
        line-height: 160%; /* 20.8px */
    }

    .contactPageAnchor {
        color: #279070;
        text-align: center;
        font-family: "Verdana";
        font-size: 13px;
        font-style: normal;
        font-weight: 400;
        line-height: 160%; /* 20.8px */
        text-decoration: none;
    }

    .contactFormContainer {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 24px;
        align-self: stretch;
    }

    .contactEntireTopInputsContainer {
        display: flex;
        width: 100%;
      
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 24px;
        align-self: stretch;
    }

    .contactInputContainer {
        display: flex;
        width: 100%;
        max-width: 360px;
        flex-direction: column;
        align-items: flex-start;
        gap: 4px;
    }

    .contactInputLabel {
        color: var(--Text-Normal, #111);
        font-family: "Verdana";
        font-size: 15px;
        font-style: normal;
        font-weight: 400;
        line-height: 160%; /* 24px */
        align-self: flex-start;
    }

    .contactInputField {
        align-self: stretch;
        color: #000000;
        font-family: "Verdana";
        font-size: 15px;
        font-style: normal;
        font-weight: 400;
        line-height: 160%; /* 24px */
        border: none;
    }

    .contactInputField::placeholder {
        color: #E4E5DA;
        opacity: 1;
    }

    .contactInputField:focus {
        outline: none

    }

    .contactInputSeperator {
        width: 100%;
        max-width: 360px;
        height: 1px;
        background: #111;
    }

    .contactMessageContainer {
        display: flex;
        width: 100%;
        max-width: 360px;
        height: 100%;
        flex-direction: column;
        align-items: flex-start;
        justify-content: center;
        align-items: center;
        gap: 24px;
       
    }

    .contactMessgageInputField {
        display: flex;
        height: 100px;
        width: 100%;
        max-width: 352px;
        color: #000000;
        font-family: "Verdana";
        font-size: 15px;
        font-style: normal;
        font-weight: 400;
        line-height: 160%; /* 24px */
        margin-top: -20px;
        resize: none;
        border: none;
    }

    .contactMessgageInputField::placeholder {
        color: #E4E5DA;
        opacity: 1;
    }

    .contactMessageSeperator {
        width: 343px;
        height: 1px;
        background: #111;
        margin-top: -20px;
    }

    .sendButton {
        display: flex;
        height: 44px;
        width: 165px;
        padding: 15px 32px 15px 32px;
        align-items: center;
        justify-content: center;
        border-radius: 10px;
        background: var(--Text-Normal, #111);
        color: #FFF;
        font-family: "Verdana";
        font-size: 14px;
        font-style: normal;
        font-weight: 400;
        line-height: 100%; /* 14px */
        border: none;
    }
}
/* ... */

